<resources>
    <string name="app_name">MyFirstJavaApplication</string>
    <string name="divided_by_zero_text">Divided by zero</string>
    <string name="error_text">Error</string>
    <string name="ac_text">AC</string>
    <string name="divide_symbol_text">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply_symbol_text">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="substract_symbol_text">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition_symbol_text">+</string>
    <string name="_0">0</string>
    <string name="dot_symbol_text">.</string>
    <string name="equal_symbol_text">=</string>
    <string name="calculator_symbol_text">Calculator symbol</string>
    <string name="path_data_calculator_symbol">M320,720L380,720L380,640L460,640L460,580L380,580L380,500L320,500L320,580L240,580L240,640L320,640L320,720ZM520,690L720,690L720,630L520,630L520,690ZM520,590L720,590L720,530L520,530L520,590ZM564,438L620,382L676,438L718,396L662,338L718,282L676,240L620,296L564,240L522,282L578,338L522,396L564,438ZM250,368L450,368L450,308L250,308L250,368ZM200,840Q167,840 143.5,816.5Q120,793 120,760L120,200Q120,167 143.5,143.5Q167,120 200,120L760,120Q793,120 816.5,143.5Q840,167 840,200L840,760Q840,793 816.5,816.5Q793,840 760,840L200,840ZM200,760L760,760Q760,760 760,760Q760,760 760,760L760,200Q760,200 760,200Q760,200 760,200L200,200Q200,200 200,200Q200,200 200,200L200,760Q200,760 200,760Q200,760 200,760ZM200,200L200,200Q200,200 200,200Q200,200 200,200L200,760Q200,760 200,760Q200,760 200,760L200,760Q200,760 200,760Q200,760 200,760L200,200Q200,200 200,200Q200,200 200,200Z</string>
</resources>