<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text=""
            android:textSize="32sp"
            android:textColor="@color/white"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAC"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0.7"
            android:background="@drawable/button_others_design"
            android:onClick="clearAll"
            android:text="@string/ac_text"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@drawable/button_operation_design"
            android:onClick="numFunc"
            android:text="@string/divide_symbol_text"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_number_design"
            android:onClick="numFunc"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/buttonEight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_number_design"
            android:onClick="numFunc"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/buttonNine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_number_design"
            android:onClick="numFunc"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_operation_design"
            android:onClick="numFunc"
            android:text="@string/multiply_symbol_text"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonFour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_number_design"
            android:onClick="numFunc"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/buttonFive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_number_design"
            android:onClick="numFunc"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/buttonSix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_number_design"
            android:onClick="numFunc"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_operation_design"
            android:onClick="numFunc"
            android:text="@string/substract_symbol_text"
            android:textColor="@color/white"
            android:textSize="64sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_number_design"
            android:onClick="numFunc"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_number_design"
            android:onClick="numFunc"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_number_design"
            android:onClick="numFunc"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_operation_design"
            android:onClick="numFunc"
            android:text="@string/addition_symbol_text"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/calculator_symbol_text"
            android:src="@drawable/calculate_24px"
            app:tint="@color/white" />

        <Button
            android:id="@+id/buttonZero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_number_design"
            android:onClick="numFunc"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/buttonPoint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_number_design"
            android:onClick="numFunc"
            android:text="@string/dot_symbol_text"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/button16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_operation_design"
            android:onClick="numCalc"
            android:text="@string/equal_symbol_text"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>
</LinearLayout>